<resources>
    <string name="app_name">Trailblaze Learn</string>
    <!--Facebook Login Data-->
    <string name="facebook_application_id">2138573943050953</string>
    <string name="fb_login_protocol_scheme">fb2138573943050953</string>

    <string name="title_activity_login">Sign in</string>
    <string name="SignOut_text">Sign Out</string>

    <string name="Trainer_select">Trainer</string>
    <string name="Participant_select">Participant</string>
    <string name="title_activity_participant_default">Participant Default</string>
    <string name="title_activity_trainer_default">TrainerDefault</string>
    <string name="to_role_selection">Switch Roles</string>
    <!--Learning Trail added by Romila-->
    <string name="trail_name_validation_msg">Please enter trail name</string>
    <string name="trail_description_validation_msg">Please enter trail description</string>
    <string name="trail_startDate_validation_msg">Please enter learning trail start date</string>
    <string name="trail_endDate_validation_msg">Please enter learning trail end date</string>
    <string name="trail_startDate_validation_less_currDate_msg">Trail Start Date must be after or same as Current Date</string>
    <string name="trail_endDate_validation_less_startDate_msg">Trail End Date must be after Trail Start Date</string>
    <string name="trail_save_successful">Trail details saved successfully</string>
    <string name="trail_name">Trail Name</string>
    <string name="trail_description">Learning Trail Description</string>
    <string name="trail_startdate">Select Trail Start Date</string>
    <string name="trail_enddate">Select Trail End Date</string>
    <string name="save">Save</string>
    <string name="dialog_enter_trail_code">Enter Trail Code</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="trail_code_example">YYYYMMDD_Name</string>
    <string name="localuser_file">loggedinUser</string>
    <string name="page_heading_learning">Create Learning Trail</string>
    <string name="page_heading_learning_list">Learning Trails</string>
    <string name="page_edit_heading_learning">Update Learning Trail</string>
    <string name="update">Update</string>
    <string name="trail_update_successful">Trail details updated sucessfully</string>
    <!---Messages added For Dharini-->
    <string name="station_name">Enter the Station Name </string>
    <string name="station_instructions">Enter the Instructions</string>
    <string name="google_maps_key">AIzaSyDiIHR-BUwlxzfddamw2R4doi7nWdADeSg </string>
    <string name="title_activity_maps">Map</string>
    <string name="btnSearchLocation">Search Location</string>

    <!--Station Discussion Activity added by Prannoy-->
    <string name ="station_discussion_heading">DISCUSSION</string>
    <string name = "message_box_description">Enter your message here</string>
    <string name = "Post_Message">Post Message</string>

    <string name="trainer_note">You can create Learning trails, trail stations.</string>
    <string name="participant_note">You can enroll for trails and record your activities.</string>
    <string name="valid_message_discussion">Please enter message</string>
    <string name="exit">Exit</string>
    <string name="network_error_txt">Sorry communication with server was lost!</string>
    <string name="trail_not_found_txt">No learning trail found! \nTry enrolling for a new one</string>
    <string name="trail_not_found">No Learning Trail available.Please add one.</string>
    <string name="station_not_found">No Trail Station available.Please add one</string>

</resources>
